--- a/f4_icd/f4_icd.ioc
+++ b/f4_icd/f4_icd.ioc
@@ -172,8 +172,8 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=N\:\\MCU\\STM_Repo\\STM32Cube_FW_F4_V1.16.0
-ProjectManager.DefaultFWLocation=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446RETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.16.0
@@ -267,7 +267,7 @@ TIM2.ICFilter_1=0
 TIM2.ICFilter_2=0
 TIM2.ICPolarity_1=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM2.IPParameters=ICFilter_1,ICFilter_2,TIM_MasterSlaveMode,ICPolarity_1,TIM_MasterOutputTrigger,Period
-TIM2.Period=65535
+TIM2.Period=655350
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
