--- a/f4_icd/f4_icd.ioc
+++ b/f4_icd/f4_icd.ioc
@@ -38,24 +38,26 @@ Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PA12
 Mcu.Pin21=PA13
 Mcu.Pin22=PA14
-Mcu.Pin23=PB3
-Mcu.Pin24=PB6
-Mcu.Pin25=PB7
-Mcu.Pin26=PB8
-Mcu.Pin27=PB9
-Mcu.Pin28=VP_FREERTOS_VS_ENABLE
-Mcu.Pin29=VP_RTC_VS_RTC_Activate
+Mcu.Pin23=PC10
+Mcu.Pin24=PC11
+Mcu.Pin25=PB3
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
+Mcu.Pin28=PB8
+Mcu.Pin29=PB9
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=VP_SYS_VS_tim10
-Mcu.Pin31=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin32=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_FREERTOS_VS_ENABLE
+Mcu.Pin31=VP_RTC_VS_RTC_Activate
+Mcu.Pin32=VP_SYS_VS_tim10
+Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin34=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=33
+Mcu.PinsNb=35
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
 MxCube.Version=4.21.0
@@ -144,6 +146,16 @@ PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC10.GPIOParameters=GPIO_Speed,GPIO_Label
+PC10.GPIO_Label=PCAP2
+PC10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PC11.GPIOParameters=GPIO_Speed,GPIO_Label
+PC11.GPIO_Label=PCAP1
+PC11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC11.Locked=true
+PC11.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -267,9 +279,9 @@ TIM2.ICFilter_1=0
 TIM2.ICFilter_2=0
 TIM2.ICPolarity_1=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM2.IPParameters=ICFilter_1,ICFilter_2,TIM_MasterSlaveMode,ICPolarity_1,TIM_MasterOutputTrigger,Period
-TIM2.Period=65535
-TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
+TIM2.Period=655350
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
