--- a/f4_irNED/f4_irNED.ioc
+++ b/f4_irNED/f4_irNED.ioc
@@ -167,8 +167,8 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=D\:\\Files\\MCU\\STMicroelectronics\\Repository\\STM32Cube_FW_F4_V1.16.0
-ProjectManager.DefaultFWLocation=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446RETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.16.0
