--- a/f4_irNED/f4_irNED.ioc
+++ b/f4_irNED/f4_irNED.ioc
@@ -22,18 +22,21 @@ Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_TX.1.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FREERTOS.IPParameters=Tasks01
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
-Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=RTC
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP1=FREERTOS
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=RTC
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -49,10 +52,11 @@ Mcu.Pin17=PB3
 Mcu.Pin18=PB6
 Mcu.Pin19=PB7
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_RTC_VS_RTC_Activate
-Mcu.Pin21=VP_SYS_VS_tim10
-Mcu.Pin22=VP_TIM2_VS_ControllerModeReset
-Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=VP_FREERTOS_VS_ENABLE
+Mcu.Pin21=VP_RTC_VS_RTC_Activate
+Mcu.Pin22=VP_SYS_VS_tim10
+Mcu.Pin23=VP_TIM2_VS_ControllerModeReset
+Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
@@ -60,27 +64,27 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
 MxCube.Version=4.21.0
 MxDb.Version=DB.4.0.210
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM10
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Speed
 PA0-WKUP.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
@@ -167,8 +171,8 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
+ProjectManager.CustomerFirmwarePackage=D\:\\Files\\MCU\\STMicroelectronics\\Repository\\STM32Cube_FW_F4_V1.16.0
+ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446RETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.16.0
@@ -246,6 +250,8 @@ TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-Input_Capture1_from_TI1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+VP_FREERTOS_VS_ENABLE.Mode=Enabled
+VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_tim10.Mode=TIM10
