--- a/f4_irNED/f4_irNED.ioc
+++ b/f4_irNED/f4_irNED.ioc
@@ -10,7 +10,7 @@ Dma.TIM2_CH1.0.MemInc=DMA_MINC_ENABLE
 Dma.TIM2_CH1.0.Mode=DMA_NORMAL
 Dma.TIM2_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM2_CH1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM2_CH1.0.Priority=DMA_PRIORITY_HIGH
+Dma.TIM2_CH1.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.TIM2_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -251,7 +251,10 @@ SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
 SH.S_TIM2_CH1_ETR.1=TIM2_CH1,TriggerSource_TI1FP1
 SH.S_TIM2_CH1_ETR.ConfNb=2
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-Input_Capture1_from_TI1
+TIM2.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,ICPolarity_CH1
+TIM2.Period=0xffffffff
+TIM2.Prescaler=83
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
