--- a/f4_irNED/f4_irNED.ioc
+++ b/f4_irNED/f4_irNED.ioc
@@ -175,8 +175,8 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=N\:\\MCU\\STM_Repo\\STM32Cube_FW_F4_V1.16.0
-ProjectManager.DefaultFWLocation=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446RETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.16.0
