--- a/f4_irNED/f4_irNED.ioc
+++ b/f4_irNED/f4_irNED.ioc
@@ -1,27 +1,27 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=TIM2_CH1
-Dma.Request1=USART1_TX
+Dma.Request0=USART1_TX
+Dma.Request1=TIM2_CH1
 Dma.RequestsNb=2
-Dma.TIM2_CH1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM2_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM2_CH1.0.Instance=DMA1_Stream5
-Dma.TIM2_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM2_CH1.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM2_CH1.0.Mode=DMA_NORMAL
-Dma.TIM2_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM2_CH1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM2_CH1.0.Priority=DMA_PRIORITY_MEDIUM
-Dma.TIM2_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_TX.1.Instance=DMA2_Stream7
-Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.1.Mode=DMA_NORMAL
-Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.1.Priority=DMA_PRIORITY_MEDIUM
-Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM2_CH1.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM2_CH1.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM2_CH1.1.Instance=DMA1_Stream5
+Dma.TIM2_CH1.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_CH1.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH1.1.Mode=DMA_NORMAL
+Dma.TIM2_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM2_CH1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH1.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.TIM2_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.0.Instance=DMA2_Stream7
+Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.0.Mode=DMA_NORMAL
+Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 File.Version=6
@@ -69,8 +69,8 @@ Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=25
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
-MxCube.Version=4.21.0
-MxDb.Version=DB.4.0.210
+MxCube.Version=4.22.0
+MxDb.Version=DB.4.0.220
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true
@@ -170,6 +170,7 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Locked=true
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
+PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
