--- a/tNEC_Decode/tNEC_Decode.ioc
+++ b/tNEC_Decode/tNEC_Decode.ioc
@@ -35,7 +35,8 @@ Mcu.IP4=RTC
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
 Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP8=WWDG
+Mcu.IPNb=9
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -51,6 +52,7 @@ Mcu.Pin17=VP_RTC_VS_RTC_Activate
 Mcu.Pin18=VP_SYS_VS_tim10
 Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_WWDG_VS_WWDG
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
@@ -58,11 +60,11 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=20
+Mcu.PinsNb=21
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
-MxCube.Version=4.21.0
-MxDb.Version=DB.4.0.210
+MxCube.Version=4.22.0
+MxDb.Version=DB.4.0.220
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true
@@ -108,8 +110,6 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
 PB8.Locked=true
@@ -145,13 +145,14 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Locked=true
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
+PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=N\:\\MCU\\STM_Repo\\STM32Cube_FW_F4_V1.16.0
-ProjectManager.DefaultFWLocation=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446RETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.16.0
@@ -169,7 +170,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USART1_UART_Init-USART1-false-HAL,5-MX_RTC_Init-RTC-false-HAL,6-MX_TIM2_Init-TIM2-false-HAL,7-MX_I2C1_Init-I2C1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USART1_UART_Init-USART1-false-HAL,5-MX_RTC_Init-RTC-false-HAL,6-MX_TIM2_Init-TIM2-false-HAL,7-MX_I2C1_Init-I2C1-false-HAL,8-MX_WWDG_Init-WWDG-false-HAL
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=42000000
@@ -231,5 +232,7 @@ VP_SYS_VS_tim10.Mode=TIM10
 VP_SYS_VS_tim10.Signal=SYS_VS_tim10
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_WWDG_VS_WWDG.Mode=WWDG_Activate
+VP_WWDG_VS_WWDG.Signal=WWDG_VS_WWDG
 board=NUCLEO-F446RE
 boardIOC=true
